--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Welcome to HTML Semantics</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi aliquid delectus, veritatis, sit inventore aspernatur qui dignissimos ipsam in dolorem nisi, sequi deleniti vel illo! Possimus nemo aliquid sint nostrum?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit at, vero nisi soluta illum asperiores cupiditate, repellendus quas dolorem, ut iste. Sed laboriosam quibusdam, molestias eum obcaecati cum voluptatum consectetur?</p>
 </body>
 </html>
